updated iOS SDK
update iOS SDK

--- a/LoplatSampleApp/LoplatSampleApp/Info.plist
+++ b/LoplatSampleApp/LoplatSampleApp/Info.plist
@@ -31,6 +31,7 @@
 	<string>샘플앱입니다. 동의해 주세요</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>location</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
