--- a/loplat SDK Sample for Swift/Podfile
+++ b/loplat SDK Sample for Swift/Podfile
@@ -9,5 +9,5 @@ target 'loplat SDK Sample for Swift' do
   pod 'SnapKit', '~> 4.0.0'
   pod 'Bohr'
   pod 'PopupDialog'
-  pod 'MiniPlengi', :podspec => '/Users/dsa28s/Desktop/loplat-ios-sdk_v2/'
+  pod 'MiniPlengi', '1.2.0'
 end
