--- a/loplat SDK Sample for Swift/loplat SDK Sample for Swift/Info.plist
+++ b/loplat SDK Sample for Swift/loplat SDK Sample for Swift/Info.plist
@@ -53,6 +53,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<true/>
 </dict>
 </plist>
