--- a/loplat SDK Sample for ObjC 2/Podfile
+++ b/loplat SDK Sample for ObjC 2/Podfile
@@ -9,7 +9,7 @@ target 'loplat SDK Sample for ObjC' do
   pod 'SnapKit', '~> 4.0.0'
   pod 'Bohr'
   pod 'PopupDialog'
-  pod 'MiniPlengi', '1.3.0'
+  pod 'TEST-MiniPlengi', '1.3.1'
 
   post_install do |installer|
         installer.pods_project.targets.each do |target|
