--- a/Simple SDK Sample for Swift/Podfile
+++ b/Simple SDK Sample for Swift/Podfile
@@ -6,5 +6,5 @@ target 'Simple SDK Sample for Swift' do
   use_frameworks!
 
   # Pods for loplat SDK Sample for Swift
-  pod 'MiniPlengi', '1.3.9xcode11.550'
+  pod 'MiniPlengi', '1.4.1.1.xcode12.350'
 end
